<resources>
    <string name="app_name">Articles Management</string>

    <!-- MAIN STRING -->
    <string name="main_articles_label">Articles</string>
    <string name="main_brands_label">Brands</string>
    <string name="main_measurements_label">Measurement Units</string>
    <string name="main_status_label">Status</string>
    <string name="main_title">Articles Management</string>


    <!-- STATUS STRINGS -->
    <string name="status_id_label">ID:</string>
    <string name="status_description_label">Description:</string>
    <string name="status_status_label">Status:</string>
    <string name="status_save_label">Save Status</string>
    <string name="status_update_label">Update</string>
    <string name="status_delete_label">Delete</string>
    <string name="status_list_title">List of Statuses</string>
    <string name="status_inactivate_label">Inactivate</string>
    <string name="status_reactivate_label">Reactivate</string>
    <string name="status_logical_delete_label">Remove</string>

    <!-- BRAND STRING -->
    <string name="brand_id_label">ID:</string>
    <string name="brand_name_label">Brand name:</string>
    <string name="brand_status_label">Brand status:</string>
    <string name="brand_save_label">Save Brand</string>
    <string name="brand_update_label">Update</string>
    <string name="brand_delete_label">Delete</string>
    <string name="brand_list_title">List of Brands</string>
    <string name="brand_inactivate_label">Inactivate</string>
    <string name="brand_reactivate_label">Reactivate</string>
    <string name="brand_logical_delete_label">Remove</string>

    <!-- MEASUREMENTS STRING -->
    <string name="measurements_id_label">ID:</string>
    <string name="measurements_name_label">Measurement name:</string>
    <string name="measurements_status_label">Measurement status:</string>
    <string name="measurements_save_label">Save Measurement</string>
    <string name="measurements_update_label">Update</string>
    <string name="measurements_delete_label">Delete</string>
    <string name="measurements_list_title">List of Measurement</string>
    <string name="measurements_inactivate_label">Inactivate</string>
    <string name="measurements_reactivate_label">Reactivate</string>
    <string name="measurements_logical_delete_label">Remove</string>

    <!-- ARTICLES STRING -->
    <string name="article_id_label">ID:</string>
    <string name="article_name_label">Article name:</string>
    <string name="article_measurement_label">Article measurement:</string>
    <string name="article_price_label">Article price:</string>
    <string name="article_brand_label">Article brand:</string>
    <string name="article_status_label">Article status:</string>
    <string name="article_save_label">Save Article</string>
    <string name="article_update_label">Update</string>
    <string name="article_delete_label">Delete</string>
    <string name="article_list_title">List of Articles</string>
    <string name="article_inactivate_label">Inactivate</string>
    <string name="article_reactivate_label">Reactivate</string>
    <string name="article_logical_delete_label">Remove</string>

</resources>